--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -26,8 +26,10 @@ if(${IS_REANIMATED_EXAMPLE_APP})
     string(APPEND CMAKE_CXX_FLAGS " -DIS_REANIMATED_EXAMPLE_APP")
 endif()
 
-if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
     string(APPEND CMAKE_CXX_FLAGS " -DDEBUG")
+else()
+    string(APPEND CMAKE_CXX_FLAGS " -DNDEBUG")
 endif()
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
