--- a/.github/workflows/check-TS-react-native.yml
+++ b/.github/workflows/check-TS-react-native.yml
@@ -28,10 +28,12 @@ jobs:
       - name: Clear annotations
         run: scripts/clear-annotations.sh
       - name: Install react-native version
+        if: ${{ matrix.react-native-version != '0.70' }}
         run: yarn add react-native@${{ matrix.react-native-version }}
-      - name: Install @types/react-native version
+      - name: Install @types/react-native with types
         if: ${{ matrix.react-native-version == '0.70' }}
-        run: yarn add @types/react-native@${{ matrix.react-native-version }}
+        run: yarn add react-native@${{ matrix.react-native-version }}
+          @types/react-native@${{ matrix.react-native-version }}
       - name: Check types
         run: yarn type:check
       - name: Check API
