--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -10,6 +10,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/validate-plugin.yml'
+      - 'plugin/**'
 jobs:
   check:
     runs-on: ubuntu-latest
