--- a/.github/workflows/build-v8-nightly.yml
+++ b/.github/workflows/build-v8-nightly.yml
@@ -1,21 +1,11 @@
-name: Test V8 on Android
+name: Test V8 on Android nightly
 on:
   pull_request:
     paths:
-      - '.github/workflows/build-v8.yml'
-      - 'android/**'
-      - 'Common/**'
-      - 'FabricExample/package.json'
-      - 'Example/package.json'
-  merge_group:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-
-env:
-  REACT_NATIVE_VERSION: "0.71.6"
+      - .github/workflows/build-v8-nightly.yml
+  schedule:
+    - cron: '37 19 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -29,7 +19,7 @@ jobs:
         with:
           path: 'reanimated_repo'
       - name: Create React Native app
-        run: npx react-native init app --version ${{ env.REACT_NATIVE_VERSION }}
+        run: npx react-native init app
       - name: Install dependencies
         working-directory: app
         run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }} react-native-v8 v8-android-jit
