--- a/.github/workflows/tvos-build.yml
+++ b/.github/workflows/tvos-build.yml
@@ -14,6 +14,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '.github/workflows/tvos-build.yml'
+      - 'RNReanimated.podspec'
+      - 'ios/**'
+      - 'Common/**'
+      - 'TVOSExample/package.json'
+      - 'TVOSExample/ios/**'
 
 jobs:
   build:
