--- a/android/build.gradle
+++ b/android/build.gradle
@@ -251,6 +251,7 @@ android {
     if (REACT_NATIVE_MINOR_VERSION >= 71) {
         buildFeatures {
             prefab true
+            buildConfig true
         }
     }
     defaultConfig {
