--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "clean:deep": "cd android && rm -rf .cxx .gradle build && cd ../Example/android && rm -rf .gradle build app/build && cd ../.. && yarn clean",
     "reset:deep": "yarn clean:deep && yarn setup",
     "plugin": "cd plugin && yarn && cd ..",
-    "app": "cd app && yarn && cd .."
+    "app": "cd app && yarn && cd ..",
+    "run-example:ios": "cd Example && yarn && cd ios && pod install && open ReanimatedExample.xcworkspace && cd .. && yarn start --reset-cache",
+    "run-example:ios:cold-start": "cd Example && yarn && cd ios && git clean -xdf && pod install && open ReanimatedExample.xcworkspace && cd .. && yarn start --reset-cache"
   },
   "main": "lib/module/index",
   "module": "lib/module/index",
